--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
   color: #424242;
   line-height: 1;
   font-family: "Inter";
-  font-size: 1rem;
+  font-size: 1.125rem;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -602,6 +602,87 @@ textarea.input {
   padding: 0.4375rem;
   color: #DBDBDB;
   font-size: 1.125rem;
+}
+
+.options {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.options__item {
+  position: relative;
+  cursor: pointer;
+}
+
+.options__item:not(:last-child) {
+  margin-bottom: 0.3125em;
+}
+
+.options__input {
+  width: 0;
+  height: 0;
+  opacity: 0;
+  position: absolute;
+}
+
+.options__input:focus + .options__label:before {
+  -webkit-box-shadow: 0 0 5px #000;
+          box-shadow: 0 0 5px #000;
+}
+
+.options__input:checked + .options__label:after {
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+.options__label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  gap: 10px;
+}
+
+.options__label:before {
+  content: "";
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  width: 20px;
+  height: 20px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20px;
+          flex: 0 0 20px;
+  border-radius: 50%;
+  border: 1px solid #a7a9ac;
+}
+
+.options__label:after {
+  content: "";
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #77243a;
+  position: absolute;
+  left: 5px;
+  top: 5px;
 }
 
 .select {
@@ -1525,8 +1606,7 @@ body::after {
   padding: 2.5rem 0.3125rem;
 }
 
-.popup--order-confirmation .popup__content,
-.popup--selection-confirmation .popup__content {
+.popup--confirmation .popup__content {
   max-width: 50rem;
   padding: 6.25rem 1.25rem;
 }
@@ -1885,8 +1965,8 @@ body::after {
           flex: 0 0 2.375rem;
   font-size: 1.25rem;
   color: #A6A6A6;
-  top: 0;
-  right: 0;
+  top: 1.25rem;
+  right: 1.25rem;
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
@@ -1971,7 +2051,7 @@ body::after {
       align-self: center;
 }
 
-.popup--order-confirmation .order-confirmation {
+.popup--confirmation .confirmation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1987,17 +2067,17 @@ body::after {
           justify-content: center;
 }
 
-.popup--order-confirmation .order-confirmation__title {
+.popup--confirmation .confirmation__title {
   margin-bottom: 1.25rem;
   text-align: center;
 }
 
-.popup--order-confirmation .order-confirmation p {
+.popup--confirmation .confirmation p {
   text-align: center;
   margin-bottom: 0.3125rem;
 }
 
-.popup--order-confirmation .order-confirmation__button {
+.popup--confirmation .confirmation__button {
   margin-top: 6.25rem;
 }
 
@@ -2010,8 +2090,8 @@ body::after {
           flex: 0 0 2.375rem;
   font-size: 1.25rem;
   color: #A6A6A6;
-  top: 0;
-  right: 0;
+  top: 1.25rem;
+  right: 1.25rem;
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
@@ -2149,36 +2229,6 @@ body::after {
   color: #A6A6A6;
 }
 
-.popup--selection-confirmation .selection-confirmation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.popup--selection-confirmation .selection-confirmation__title {
-  margin-bottom: 1.25rem;
-  text-align: center;
-}
-
-.popup--selection-confirmation .selection-confirmation p {
-  text-align: center;
-  margin-bottom: 0.3125rem;
-}
-
-.popup--selection-confirmation .selection-confirmation__button {
-  margin-top: 6.25rem;
-}
-
 .popup--footer .popup__close {
   position: absolute;
   width: 2.375rem;
@@ -2188,8 +2238,8 @@ body::after {
           flex: 0 0 2.375rem;
   font-size: 1.25rem;
   color: #A6A6A6;
-  top: 0;
-  right: 0;
+  top: 1.25rem;
+  right: 1.25rem;
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
